# Disassembler

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/disasm/: disasm.hpp  types.hpp
lib/include/disasm/spec/: bit_pattern.hpp  loader.hpp  opcode.hpp  spec.hpp
lib/source/spec/: bit_pattern.cpp  loader.cpp  opcode.cpp  spec.cpp
specs/8051/: base.json
specs/x86/: base.json
tests/: CMakeLists.txt
tests/source/: main.cpp
